--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing</title>
+    <title> Our Project!</title>
 </head>
 <body>
-    <h1>Test 1</h1>
-    <h3>Hi Chrisitian!</h3>
-    <h1>Hellooooo</h1>
+
+    <div id = 'Mac' class = 'Laptops'>
+        <h1>Macs are the best!!!!</h1>
+        <div>
+            <img src = 'https://www.bing.com/images/search?view=detailV2&ccid=JnWDJUu3&id=824EAFB475218DB2EF6471FB398E198B0FCDCBC9&thid=OIP.JnWDJUu35IjxW5qUJLouwgHaHa&mediaurl=https%3a%2f%2fi5.walmartimages.com%2fasr%2fe5850c59-c16f-4423-9fab-26cfedaf35e0_1.a26e685ebc8ab23a3000229075aa23c7.jpeg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.267583254bb7e488f15b9a9424ba2ec2%3frik%3dycvND4sZjjn7cQ%26pid%3dImgRaw%26r%3d0&exph=1000&expw=1000&q=mac+computer&simid=608056151287400020&FORM=IRPRST&ck=92FD0B5F7067F487F4D96B62A743B1B3&selectedIndex=10&ajaxhist=0&ajaxserp=0' alt= '1st image'>
+
+            <p>This is a mac computer</p>
+        </div>
+
+        <ol>
+            <li>Macbook bing </li>
+            <li>Macbook stone </li>
+            <li>McMac Mackbook</li>
+        </ol>
+
+        <ul>
+            <li>1.99</li>
+            <li>2.99</li>
+            <li>3.99</li>
+        </ul>
+       
+    </div>
+
+    <div id = 'windows' class = 'Laptops'>
+        <h1>Nope, windows are the best!</h1>
+        <div>
+            <img src = 'https://www.bing.com/images/search?view=detailV2&ccid=xrfDIJ4x&id=561A25B70F26EC8F993AF3EE1A47A2FC570D42D2&thid=OIP.xrfDIJ4x8aOKZKXfmuqciQHaEu&mediaurl=https%3a%2f%2fwww.lifewire.com%2fthmb%2f6VfC7LaupUGLm30rScQ6rmSc8vk%3d%2f1500x956%2ffilters%3afill(auto%2c1)%2fwindows-10-5a257e1e4e46ba001a99c158.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.c6b7c3209e31f1a38a64a5df9aea9c89%3frik%3d0kINV%252fyiRxru8w%26pid%3dImgRaw%26r%3d0&exph=956&expw=1500&q=windows+computer&simid=608039362249830176&FORM=IRPRST&ck=4709BFE0B9F1DBB8702D84EDD252FA4D&selectedIndex=1&ajaxhist=0&ajaxserp=0' alt = '1st image'>
+            <p> This is a windows computer</p>
+        </div>
+
+        <ol>
+            <li>Windows window </li>
+            <li>Windows next gen </li>
+            <li>Windows basic </li>
+        </ol>
+
+        <ul>
+            <li>1000</li>
+            <li>2000</li>
+            <li>3000</li>
+        </ul>
+
+    </div>
+    
+
+
 </body>
 </html>
